@@ -6,8 +6,6 @@ buildscript {
     }
     dependencies {
         classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0'
-        //classpath "gradle.plugin.org.gretty:gretty:2.3.1"
- //       classpath "gradle.plugin.org.gretty:gretty:3.0.3"
         classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
     }
 }
@@ -17,47 +15,25 @@ plugins {
     id "de.undercouch.download" version "4.1.1"
 }
 
-apply plugin: 'jacoco'
+/*apply plugin: 'jacoco'
 
 jacoco {
     toolVersion = '0.8.5'
-}
+}*/
 
 apply plugin: 'java-library'
 apply plugin: 'base'
 apply plugin: 'com.github.kt3k.coveralls'
-//apply plugin: 'org.gretty'
-
-/*buildscript {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
-        classpath "gradle.plugin.org.gretty:gretty:3.0.3"
-    }
-}
-
-apply plugin: 'maven'
-//apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'org.gretty'
-*/
 
 group = "org.grobid.datastet"
-version = '0.7.3-SNAPSHOT'
+version = '0.8.0-SNAPSHOT'
 
 description = """datastet"""
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+//sourceCompatibility = 1.8
+//targetCompatibility = 1.8
+
+import org.apache.tools.ant.taskdefs.condition.Os
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -66,7 +42,7 @@ tasks.withType(JavaCompile) {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url "https://jitpack.io" }
+//    maven { url "https://jitpack.io" }
     maven { url "https://grobid.s3.eu-west-1.amazonaws.com/repo/" }
     maven {
         url new File(rootProject.rootDir, "lib")
@@ -84,10 +60,6 @@ dependencies {
 
     // packaging local libs inside output jar
     //implementation fileTree(dir: new File(rootProject.rootDir, 'lib'), include: localLibs)
-
-    //Grobid
-    implementation group: 'org.grobid', name: 'grobid-core', version: '0.7.3-SNAPSHOT'
-    implementation group: 'org.grobid', name: 'grobid-trainer', version: '0.7.3-SNAPSHOT'
 
     implementation group: 'net.arnx', name: 'jsonic', version: '1.3.10'
 
@@ -107,9 +79,9 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-jre'
 
     //Dropwizard
-    implementation "io.dropwizard:dropwizard-core:1.3.23" 
+    implementation "io.dropwizard:dropwizard-core:1.3.23"
     implementation "io.dropwizard:dropwizard-assets:1.3.23"
-    implementation "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.2"
+    implementation "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.0"
     implementation "io.dropwizard:dropwizard-testing:1.3.23"
     implementation "io.dropwizard:dropwizard-forms:1.3.23"
     implementation "io.dropwizard:dropwizard-client:1.3.23"
@@ -117,6 +89,7 @@ dependencies {
     implementation "io.dropwizard.metrics:metrics-core:4.0.0"
     implementation "io.dropwizard.metrics:metrics-servlets:4.0.0"
 
+    //Parsing xml/json
     //Parsing xml/json
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
@@ -129,6 +102,12 @@ dependencies {
     implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
     implementation group: 'asm', name: 'asm', version: '3.3.1'
 
+    implementation 'black.ninia:jep:4.0.2'
+    implementation "joda-time:joda-time:2.9.9"
+    implementation "org.apache.lucene:lucene-analyzers-common:4.5.1"
+    implementation group: 'org.jruby', name: 'jruby-complete', version: '9.2.13.0'
+    implementation "org.apache.pdfbox:pdfbox:2.0.18"
+
     //implementation 'org.jvnet.mimepull:mimepull:1.6'
 
     //providedImplementation group: 'javax.servlet', name: 'servlet-api', version: '2.4'
@@ -139,6 +118,10 @@ dependencies {
 
     // for sentence segmentation only
     implementation 'org.apache.opennlp:opennlp-tools:1.9.1'
+
+    //Grobid
+    implementation group: 'org.grobid', name: 'grobid-core', version: '0.8.0-SNAPSHOT'
+    implementation group: 'org.grobid', name: 'grobid-trainer', version: '0.8.0-SNAPSHOT'
 
     //Tests
     testImplementation group: 'junit', name: 'junit', version: '4.12'
@@ -155,6 +138,20 @@ dependencies {
     }
 }*/
 
+def libraries = ""
+if (Os.isFamily(Os.FAMILY_MAC)) {
+    if (Os.OS_ARCH.equals("aarch64")) {
+        libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"    
+    } else {
+        libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+    }
+} else if (Os.isFamily(Os.FAMILY_UNIX)) {
+    libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+        "${file("../grobid-home/lib/lin-64").absolutePath}:"
+} else  {
+    throw new RuntimeException("Unsupported platform!")
+}
+
 configurations.implementation.setCanBeResolved(true)
 
 configurations.all { 
@@ -162,7 +159,7 @@ configurations.all {
         force 'xml-apis:xml-apis:1.4.01'
     }
     exclude group: 'org.slf4j', module: "slf4j-log4j12"
-    //exclude group: 'log4j', module: "log4j"
+    exclude group: 'log4j', module: "log4j"
     exclude group: 'org.slf4j', module: "slf4j-jdk14"
 
     //if (project.gradle.startParameter.taskNames.contains('run') ||
@@ -300,6 +297,12 @@ task installModels(type: Copy) {
 test {
     testLogging.showStandardStreams = true
     exclude '**/**IntegrationTest**'
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED", 
+        "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 }
 
 //tasks.withType(JavaCompile) {
@@ -318,6 +321,12 @@ task(train_dataseer, dependsOn: 'classes', type: JavaExec, group: 'training') {
     mainClass = 'org.grobid.trainer.DataseerTrainerRunner'
     classpath = sourceSets.main.runtimeClasspath
     args '0', 'dataseer', getArg('gH', '../grobid-home'), getArg('t', '0')
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xmx3072m'
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 //    jvmArgs '-Xms2g', '-Xmx8g'
 }
 
@@ -334,6 +343,12 @@ task(eval_dataseer, dependsOn: 'classes', type: JavaExec, group: 'evaluation') {
     mainClass = 'org.grobid.trainer.DataseerTrainerRunner'
     classpath = sourceSets.main.runtimeClasspath
     args '1', 'dataseer', getArg('gH', '../grobid-home')
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xmx3072m'
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 //    jvmArgs '-Xms2g', '-Xmx8g'
 }
 
@@ -342,7 +357,13 @@ task(eval_dataseer_split, dependsOn: 'classes', type: JavaExec, group: 'evaluati
     mainClass = 'org.grobid.trainer.DataseerTrainerRunner'
     classpath = sourceSets.main.runtimeClasspath
     args '2', 'dataseer', getArg('gH', '../grobid-home'), getArg('s', 0.9), getArg('t', '0')
-    jvmArgs '-Xms2g', '-Xmx8g'
+    //jvmArgs '-Xms2g', '-Xmx8g'
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xms2g', '-Xmx8g', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xms2g', '-Xmx8g'
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 }
 
 // Run like this: ./gradlew eval_dataseer_nfold -PgH=/path/grobid/home -Pt=10
@@ -350,7 +371,12 @@ task(eval_dataseer_nfold, dependsOn: 'classes', type: JavaExec, group: 'evaluati
     mainClass = 'org.grobid.trainer.DataseerTrainerRunner'
     classpath = sourceSets.main.runtimeClasspath
     args '3', 'dataseer', getArg('gH', '../grobid-home'), getArg('n', 10), getArg('t', '0')
-    jvmArgs '-Xms2g', '-Xmx8g'
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xms2g', '-Xmx8g', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xms2g', '-Xmx8g'
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 }
 
 // Run like this: ./gradlew annotated_corpus_generator_csv -Pfull=/path/input/fulltext -Ppdf=/path/input/pdf -Pcsv=/path/csv -Pxml=/output/directory
@@ -358,7 +384,12 @@ task(annotated_corpus_generator_csv, dependsOn: 'classes', type: JavaExec, group
     mainClass = 'org.grobid.trainer.AnnotatedCorpusGeneratorCSV'
     classpath = sourceSets.main.runtimeClasspath
     args getArg('full', ''), getArg('pdf', ''), getArg('csv', ''), getArg('xml', 'resources/dataset/dataseer/corpus/')
-    jvmArgs '-Xms2g', '-Xmx8g'
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xms2g', '-Xmx8g', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xms2g', '-Xmx8g'
+    }
+    systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
 }
 
 //////////
@@ -368,6 +399,13 @@ application {
     mainClassName = 'org.grobid.service.DataseerApplication'
 
     run {
+        if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        }
+        workingDir = rootProject.rootDir
+        def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
+        systemProperty "java.library.path", javaLibraryPath
+
         args = ['server', 'resources/config/server.yml']
     }
 }
